[tool.poetry]
name = "network-devices"
version = "0.1.0"
description = "Get connected network devices from fritz.box"
authors = ["Ralf Vogler <ralf.vogler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fritzconnection = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
